--- a/index.html
+++ b/index.html
@@ -10,10 +10,8 @@
     <div class="menu-container">
         <div class="menu">
             <div class="date">May 17th</div>
-            <div class="links">
-                <div class="signup">Sign Up</div>
-                <div class="login">Login</div>
-            </div>
+            <div class="signup">Sign Up</div>
+            <div class="login">Login</div>
         </div>
     </div>
     <div class="header-container">
@@ -37,10 +35,15 @@
             <div class="photo-grid-item">
                 <img src="images/four.svg" alt="">
             </div>
-            <div class="photo-grid-item">
+            <div class="photo-grid-item last-item">
                 <img src="images/five.svg" alt="">
             </div>
         </div>
+    </div>
+    <div class="footer">
+        <div class="footer-item footer-one"></div>
+        <div class="footer-item footer-two"></div>
+        <div class="footer-item footer-three"></div>
     </div>
 </body>
 </html>
